--- a/committee.tex
+++ b/committee.tex
@@ -55,7 +55,7 @@ I introduce two elements: the relative pronoun, which is always the internal ele
 
 
 
-\subsection{The (relative pronoun as) internal element}
+\subsection{The relative pronoun = internal}
 
 The sentences in \ref{ex:mg-extrapose-cp} show that it is possible to extrapose a CP. In \ref{ex:mg-extrapose-cp-base}, the clausal object \tit{wie es dir geht} `how you are doing', marked here in bold, appears in its base position. It can be extraposed to the right edge of the clause, shown in \ref{ex:mg-extrapose-cp-moved}.
 
@@ -110,7 +110,7 @@ Jan has what eaten he cooked has\\
 In conclusion, extraposition facts show, that the relative pronoun in Modern German is syntactically part of the relative clause.
 
 
-\subsection{The external element}
+\subsection{The other element = external}
 
 Like I said, we need an element here. But where and how? Well, there are actually languages that show we have it!
 The existence of this element is independently motivated by languages that overtly show it.
