--- a/fenna-files/abbreviations.sty
+++ b/fenna-files/abbreviations.sty
@@ -42,6 +42,12 @@
   tag = abbr
 }
 
+\DeclareAcronym{nmlz}{
+  short = \tsc{nmlz} ,
+  long  = nominalization ,
+  tag = abbr
+}
+
 \DeclareAcronym{1}{
   short = 1 ,
   long  = first person ,
