--- a/recurring-pattern.tex
+++ b/recurring-pattern.tex
@@ -6,14 +6,14 @@ This chapter introduces the pattern that forms the focus of the first part of th
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-intro}
 
-Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization across languages. Section \ref{sec:case-morphology} shows that the case scale also appears in morphological patterns. It can be observed in patterns of syncretism and in morphological containment.
+Then I show that this pattern is not unique to headless relatives. It appears in more syntactic and morphological phenomena. Section \ref{sec:impl-hier} discusses two implicational hierarchies that show the same case ordering. The hierarchies concern agreement and relativization in different languages. Section \ref{sec:case-morphology} shows that the case scale also appears in morphology. It can be observed in patterns of syncretism and in morphological containment.
 
 
 \section{In headless relatives}\label{sec:pattern-rels}
 
-As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. In this section I first discuss examples in which the internal and the external match, and then examples in which they differ.
+As the name suggests, headless relatives are relative clauses that lack an (overt) head. The internal case, the case from the relative clause, and the external case, the case from the main clause, compete to surface on the relative pronoun. In this section I first discuss examples in which the internal case and the external case match, and then examples in which they differ.
 
-If the internal and the external case are identical, the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. I give examples in which the internal and external case are respectively nominative, accusative and dative. The relative pronoun appears in the respective cases.
+If the internal case and the external case are the same case, the relative pronoun simply surfaces in that case. I illustrate this with examples from headless relatives in Gothic. The cases I discuss are nominative, accusative and dative.
 
 The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
 <http://www.wulfila.be>
@@ -21,7 +21,7 @@ The description of Gothic is mostly based on \citep{harbert1978}. The spelling o
 
 Consider the example in \ref{ex:gothic-nom-nom}, in which the internal nominative case competes against the external nominative case.
 The internal case is nominative, as the predicate \tit{matjan} `to eat' takes nominative subjects.
-The external case is nominative as well, as the predicate \tit{ga-dauþnan} `to die' takes nominative subjects.
+The external case is nominative as well, as the predicate \tit{ga-dauþnan} `to die' also takes nominative subjects.
 The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the internal and external case: the nominative.
 
 \exg. ei sa -ei þis matjai, ni gadauþnai\\
@@ -30,16 +30,16 @@ The relative pronoun \tit{sa} `\ac{rel}.\ac{sg}.\ac{m}.\ac{nom}' appears in the 
 
 Consider the example in \ref{ex:gothic-acc-acc-rep}, in which the internal accusative case competes against the external accusative case.
 The internal case is accusative, as the predicate \tit{arman} `to pity' takes accusative objects.
-The external case is accusative as well, the predicate \tit{ga-arman} `to pity' takes accusative objects.
+The external case is accusative as well, as the predicate \tit{ga-arman} `to pity' also takes accusative objects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal and external case: the accusative.
 
 \exg. gaarma þan -ei arma\\
  pity.1\ac{sg}\scsub{[acc]} \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} pity.1\ac{sg}\scsub{[acc]}\\
  `I pity him, whom I pity' \flushfill{Gothic, \ac{rom} 9:15, after \pgcitealt{harbert1978}{339}}\label{ex:gothic-acc-acc-rep}
 
-Consider the examples in \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case.
+Consider the example in \ref{ex:gothic-dat-dat}, in which the internal dative case competes against the external dative case.
 The internal case is dative, as the predicate \tit{manwjan} `to prepare' takes dative indirect objects.
-The external case is dative as well, the predicate \tit{giban} `to give' takes dative indirect objects.
+The external case is dative as well, as the predicate \tit{giban} `to give' also takes dative indirect objects.
 The relative pronoun \tit{þaim)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal and external case: the dative.
 
 \exg. nist mein du giban, alja þaim -ei manwiþ was\\
@@ -52,7 +52,7 @@ The diagonal from the top left to the bottom right corresponds to the examples g
 
 \begin{table}[H]
  \center
- \caption{Extensive summary of Gothic headless relatives (matching)}
+ \caption{Gothic headless relatives (matching)}
  \begin{tabular}{c|c|c|c}
    \toprule
     \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -89,13 +89,13 @@ In the literature about headless relatives, the genitive is often discussed toge
 
 This can be reformulated as follows. In a competition, accusative wins over nominative, dative wins over nominative, and dative wins over accusative. In this section I illustrate this scale with examples. When two differing cases compete, the relative pronoun always appears in the case more to the right on the case scale. It does not matter whether it is the internal or the external case.
 
-I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in accusative case and never in nominative.
+I start with the competition between accusative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the accusative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-nom-acc-rep}, repeated from the introduction. In this example, the internal accusative case competes against the external nominative case.
 The internal case is accusative, as the predicate \tit{frijon} `to love' takes accusative objects.
 The external case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The relative pronoun \tit{þan(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{acc}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. \tbf{þan} \tbf{-ei} \tbf{frijos} siuks ist\\
  \ac{rel}.\ac{sg}.\ac{m}.\ac{acc} -\ac{comp} love.\ac{pres}.2\ac{sg}.\scsub{[acc]} sick be.\ac{pres}.3\ac{sg}\scsub{[nom]}\\
@@ -105,7 +105,7 @@ Consider the example in \ref{ex:gothic-acc-nom-rep}, repeated from the introduct
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is accusative, as the predicate \tit{ussiggwan} `to read' takes accusative objects.
 The relative pronoun \tit{þo} `\ac{rel}.\ac{sg}.\ac{n}.\ac{acc}' appears in the external case: the accusative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in nominative case are unattested.
+Examples in which the internal case is nominative, the external case is accusative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. jah þo \tbf{-ei} \tbf{ist} \tbf{us} \tbf{Laudeikaion} jus ussiggwaid\\
  and \ac{rel}.\ac{sg}.\ac{n}.\ac{acc} -\ac{comp} be.\ac{pres}.3\ac{sg}\scsub{[nom]} from Laodicea 2.\ac{pl}.\ac{nom} read.\scsub{[acc]}\\
@@ -115,11 +115,11 @@ The two examples in which nominative and accusative compete are showed in Table 
 Throughout this dissertation * stands for 'not found in natural language'. For extinct languages this means that there are no attested examples. For non-extinct languages it means that the examples are ungrammatical.
 }
 
-The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in nominative case.
+The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the internal accusative wins the case competition over the external nominative, and the relative pronoun surfaces in the accusative case. The dark gray marking corresponds to \ref{ex:gothic-acc-nom-rep}, in which the external accusative wins the case competition over the internal nominative, and the relative pronoun surfaces in the accusative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the accusative compete and the relative pronoun appears in the nominative case.
 
 \begin{table}[H]
  \center
- \caption{Extensive summary of Gothic headless relatives (\ac{nom} --- \ac{acc})}
+ \caption{Gothic headless relatives (\ac{nom} --- \ac{acc})}
  \begin{tabular}{c|c|c|c}
    \toprule
      \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -147,13 +147,13 @@ The light gray marking corresponds to \ref{ex:gothic-nom-acc-rep}, in which the 
    \label{tbl:summary-gothic-nom-acc}
 \end{table}
 
-I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in nominative.
+I continue with the competition between dative and nominative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in nominative.
 
 Consider the example in \ref{ex:gothic-nom-dat}, in which the internal dative case competes against the external nominative case.
 The internal case is dative, as the predicate \tit{fraletan} `to forgive' takes dative objects.
 The external case is nominative, as the predicate \tit{frijon} `to love' takes nominative subjects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+Examples in which the internal case is dative, the external case is nominative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. iþ \tbf{þamm} \tbf{-ei} \tbf{leitil} \tbf{fraletada} leitil frijod\\
  but \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} little {forgive}.\ac{pass}.\ac{pres}.3\ac{sg}\scsub{[dat]} little love.\scsub{[nom]}\\
@@ -163,17 +163,17 @@ Consider the example in \ref{ex:gothic-dat-nom}, in which the internal nominativ
 The internal case is nominative, as the predicate \tit{wisan} `to be' takes nominative subjects.
 The external case is dative, as the predicate \tit{fraþjan} `to think about' takes dative indirect objects.
 The relative pronoun \tit{þaim} `\ac{rel}.\ac{pl}.\ac{n}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in nominative case are unattested.
+Examples in which the internal case is nominative, the external case is dative and the relative pronoun appears in the nominative case are unattested.
 
 \exg. þaim \tbf{-ei} \tbf{iupa} \tbf{sind} fraþjaiþ \\
  \ac{rel}.\ac{pl}.\ac{n}.\ac{dat} -\ac{comp} above be.\ac{pres}.3\ac{pl}\scsub{[nom]} {think about}.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]}\\
  `think about those which are above' \flushfill{Gothic, \ac{col} 3:2, adapted from \pgcitealt{harbert1978}{339}}\label{ex:gothic-dat-nom}
 
-The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in nominative case.
+The two examples in which nominative and dative compete are showed in Table \ref{tbl:summary-gothic-nom-dat}. The light gray marking corresponds to \ref{ex:gothic-nom-dat}, in which the internal dative wins the case competition over the external nominative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-nom}, in which the external dative wins the case competition over the internal nominative, and the relative pronoun surfaces in the dative case. The instances of *\ac{nom} that appear in the same cells indicate that there are no examples, in which the nominative and the dative compete and the relative pronoun appears in the nominative case.
 
  \begin{table}[H]
   \center
-  \caption{Extensive summary of Gothic headless relatives (\ac{nom} --- \ac{dat})}
+  \caption{Gothic headless relatives (\ac{nom} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
       \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -201,7 +201,7 @@ The two examples in which nominative and dative compete are showed in Table \ref
     \label{tbl:summary-gothic-nom-dat}
  \end{table}
 
-I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in dative case and never in accusative.
+I end with the competition between dative and accusative. Following the case scale in \ref{ex:case-scale}, the relative pronoun appears in the dative case and never in accusative.
 
 Consider the example in \ref{ex:gothic-acc-dat}, in which the internal dative case competes against the external accusative case.
 The internal case is dative, as the preposition \tit{ana} `on' takes dative complements.\footnote{
@@ -214,7 +214,7 @@ There is reason to believe that this missing occurrence is due to the above ment
 }
 The external case is accusative, as the predicate \tit{ushafjan} `to pick up' takes accusative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{n}.\ac{dat}' appears in the internal case: the dative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in accusative case are unattested.
+Examples in which the internal case is dative, the external case is accusative and the relative pronoun appears in the accusative case are unattested.
 
 \exg. ushafjands \tbf{ana} \tbf{þamm} \tbf{-ei} \tbf{lag}\\
 {pick up}.\ac{pres}.\ac{ptcp}\scsub{[acc]} on\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{n}.\ac{dat} -\ac{comp} lie.\ac{pret}.3\ac{sg}\\
@@ -224,17 +224,17 @@ Consider the example in \ref{ex:gothic-dat-acc}, in which the internal accusativ
 The internal case is accusative, as the predicate \tit{insandjan} `to send' takes accusative objects.
 The external case is dative, as the predicate \tit{galaubjan} `to believe' takes dative objects.
 The relative pronoun \tit{þamm(a)} `\ac{rel}.\ac{sg}.\ac{m}.\ac{dat}' appears in the external case: the dative. The relative pronoun is not marked in bold, just like as the main clause, showing that the relative pronoun patterns with the main clause.
-Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in accusative case are unattested.
+Examples in which the internal case is accusative, the external case is dative and the relative pronoun appears in the accusative case are unattested.
 
 \exg. ei galaubjaiþ þamm \tbf{-ei} \tbf{insandida} \tbf{jains}\\
 that believe.\ac{opt}.\ac{pres}.2\ac{pl}\scsub{[dat]} \ac{rel}.\ac{sg}.\ac{m}.\ac{dat} -\ac{comp} {send}.\ac{pret}.3\ac{sg}\scsub{[acc]} \ac{dem}.\ac{sg}.\ac{m}.\ac{nom}\\
 `that you believe in him whom he sent' \flushfill{Gothic, \ac{john} 6:29}\label{ex:gothic-dat-acc}
 
-The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in accusative case.
+The two examples in which accusative and dative compete are showed in Table \ref{tbl:summary-gothic-acc-dat}. The light gray marking corresponds to \ref{ex:gothic-acc-dat}, in which the internal dative wins the case competition over the external accusative, and the relative pronoun surfaces in the dative case. The dark gray marking corresponds to \ref{ex:gothic-dat-acc}, in which the external dative wins the case competition over the internal accusative, and the relative pronoun surfaces in the dative case. The instances of *\ac{acc} that appear in the same cells indicate that there are no examples, in which the accusative and the dative compete and the relative pronoun appears in the accusative case.
 
  \begin{table}[H]
   \center
-  \caption{Extensive summary of Gothic headless relatives (\ac{acc} --- \ac{dat})}
+  \caption{Gothic headless relatives (\ac{acc} --- \ac{dat})}
   \begin{tabular}{c|c|c|c}
     \toprule
       \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
@@ -395,7 +395,7 @@ Putting the languages in \posscitet{moravcsik1978} schema gives the result as sh
 
 So far I have discussed the implicational hierarchy in terms of grammatical function. In what follows, I discuss how it actually should be formalized in terms of the case scale that has also been observed for case competition in headless relatives.
 
-\citet{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. It is often the case that subjects appear in nominative case, and that direct objects appear in accusative. However, this is not always the case. Subjects can be non-nominative and direct objects can be non-accusative. \citeauthor{bobaljik2006} gives examples of two types of situations in which this is the case: non-nominative subjects in Icelandic and ergative-absolutive languages. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. I go through both situations \citeauthor{bobaljik2006} describes.
+\citet{bobaljik2006} argues that the implicational hierarchy is more accurate if it is stated in terms of case rather than grammatical function. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. It is often the case that subjects appear in the nominative case, and that direct objects appear in accusative. However, this is not always the case. Subjects can be non-nominative and direct objects can be non-accusative. \citeauthor{bobaljik2006} gives examples of two types of situations in which this is the case: non-nominative subjects in Icelandic and ergative-absolutive languages. In these situations, case seem to capture the facts for the implicational hierarchy, and grammatical function does not. I go through both situations \citeauthor{bobaljik2006} describes.
 
 Icelandic is a language that has dative subjects. It is like German in that it only shows agreement with a single argument. If agreement takes place with the grammatical subject, it is expected that the dative subject agrees with the predicate. This is not what happens, as illustrated in \ref{ex:icelandic-dat-subj}. The dative subject \tit{morgum studentum} `many students' is plural. The sentence is ungrammatical with the predicate \tit{líka} `like' inflecting for plural as well. So, the dative subject does not agree in number with the predicate. In other words, it is not the grammatical subject that shows agreement.
 
@@ -469,7 +469,7 @@ This formulation in terms of case rather than grammatical function works as foll
 First, Japanese is a language that does not show any agreement, as shown in \ref{ex:japanese-agr}. There is no agreement with the unmarked case (here the nominative), not with the dependent case (here the accusative) and not with the dative case.
 Second, German is a language that shows agreement only with the unmarked case, as shown in \ref{ex:german-agr}. The morpheme \tit{-st} on the predicate agrees with the element in unmarked nominative case \tit{du} `you'. There is no agreement with the dependent accusative case or with the dative case.
 Third, Hungarian is a language that shows agreement with the unmarked and the dependent case, as shown in \ref{ex:hungarian-agr}. The portmanteau morpheme \tit{-om} on the predicates agrees with the element in unmarked nominative case \tit{én} `I' and the element in dependent accusative case \tit{a könyvet} `the book'.
-Last, Basque is a language that shows agreement with the unmarked, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in dependent ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in unmarked absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in dative case \tit{niri} `me'.
+Last, Basque is a language that shows agreement with the unmarked, the dependent and the dative case, as shown in \ref{ex:basque-agr}. The morpheme \tit{-zu} on the auxiliary agrees with the element in dependent ergative case \tit{zuk} `you'. The morpheme \tit{d-} on the auxiliary agrees with the element in unmarked absolutive case \tit{liburua} `the book'. The morpheme \tit{-ta} on the auxiliary agrees with the element in the dative case \tit{niri} `me'.
 
 In the languages I discuss in this dissertation, I focus on languages that have nominative as unmarked case and accusative as dependent case, so Figure \ref{fig:agr-nom-acc-dat} suffices.
 
